CSS: fix overflow about text size and spacing filters

--- a/css/style.css
+++ b/css/style.css
@@ -364,35 +364,46 @@ a {
     }
 
     .search-composant {
-        --body-padding:25px;
+        --body-padding:20px;
         padding-inline: var(--body-padding);
     }
 
     .search-filters-list {
+        --gap:5px;
         justify-content: space-between;
     }
 
     .search-link {
-        width:180px;
+        width: 140px;
+        padding: 5px;
     }
+
+    .search-filters-list {
+        gap: .6rem 0 ;
+      }
+
+    .search-link > .fa-solid {
+        padding-right: 10px;
+      }
    
     #search-entry{
-        width:100%;
+        width: 175px;
     }
 
     #search-validate {
         --op:.33;
-        width: 50px; 
-        position: relative; 
-        transform: translateX(-8px);
+        width: 52px; 
+        /* position: relative;  */
+        transform: translateX(-5px);
         color: transparent;
         filter: drop-shadow(0px 3px 12px rgba(0, 0, 0, var(--op)));
         border-radius: 15px;
+        font-size: 0;
     }
 
         #search-validate::after{
             content: "\f002";
-            display: block;
+            /* display: block; */
             position: absolute;
             top: 50%;
             left: 50%;
